[gd_scene load_steps=32 format=3 uid="uid://bpca0nthb6ewb"]

[ext_resource type="Script" uid="uid://bjeu2daw8ap7g" path="res://Assets/Scripts/enemy_1.gd" id="1_inw11"]
[ext_resource type="Texture2D" uid="uid://gm8qngqrf2p3" path="res://Assets/Sprites/Flying Demon 2D Pixel Art/Sprites/with_outline/ATTACK.png" id="2_logkm"]
[ext_resource type="Texture2D" uid="uid://dq3xjv24aw3ph" path="res://Assets/Sprites/Flying Demon 2D Pixel Art/Sprites/with_outline/HURT.png" id="3_7fd8k"]
[ext_resource type="Texture2D" uid="uid://bajqylvcoxyqg" path="res://Assets/Sprites/Flying Demon 2D Pixel Art/Sprites/with_outline/DEATH.png" id="4_gbesp"]
[ext_resource type="Texture2D" uid="uid://hjw5xjf8ka8h" path="res://Assets/Sprites/Flying Demon 2D Pixel Art/Sprites/with_outline/IDLE.png" id="5_inno6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fa6de"]
radius = 17.0
height = 34.0

[sub_resource type="AtlasTexture" id="AtlasTexture_hvdeh"]
atlas = ExtResource("2_logkm")
region = Rect2(0, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1acv"]
atlas = ExtResource("2_logkm")
region = Rect2(81, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieasm"]
atlas = ExtResource("2_logkm")
region = Rect2(162, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_5babb"]
atlas = ExtResource("2_logkm")
region = Rect2(243, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_pyf1w"]
atlas = ExtResource("2_logkm")
region = Rect2(324, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_eby4t"]
atlas = ExtResource("2_logkm")
region = Rect2(405, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xtug"]
atlas = ExtResource("2_logkm")
region = Rect2(486, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5t7x"]
atlas = ExtResource("2_logkm")
region = Rect2(567, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfox7"]
atlas = ExtResource("3_7fd8k")
region = Rect2(0, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5nhf"]
atlas = ExtResource("3_7fd8k")
region = Rect2(81, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_nolkj"]
atlas = ExtResource("3_7fd8k")
region = Rect2(162, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bie5"]
atlas = ExtResource("3_7fd8k")
region = Rect2(243, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5pr6"]
atlas = ExtResource("4_gbesp")
region = Rect2(0, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_omqwt"]
atlas = ExtResource("4_gbesp")
region = Rect2(81, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_el5mi"]
atlas = ExtResource("4_gbesp")
region = Rect2(162, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_sb64l"]
atlas = ExtResource("4_gbesp")
region = Rect2(243, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_x56l8"]
atlas = ExtResource("4_gbesp")
region = Rect2(324, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_pame6"]
atlas = ExtResource("4_gbesp")
region = Rect2(405, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5k73"]
atlas = ExtResource("5_inno6")
region = Rect2(0, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_kb1tv"]
atlas = ExtResource("5_inno6")
region = Rect2(81, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qvg4"]
atlas = ExtResource("5_inno6")
region = Rect2(162, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6rr6"]
atlas = ExtResource("5_inno6")
region = Rect2(243, 0, 81, 71)

[sub_resource type="SpriteFrames" id="SpriteFrames_j4qsk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvdeh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1acv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieasm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5babb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyf1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eby4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xtug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5t7x")
}],
"loop": false,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfox7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5nhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nolkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bie5")
}],
"loop": false,
"name": &"damage",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5pr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omqwt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_el5mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sb64l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x56l8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pame6")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5k73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kb1tv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qvg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6rr6")
}],
"loop": true,
"name": &"move",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vb2cf"]
radius = 50.0
height = 100.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n0o3a"]
radius = 85.0
height = 170.0

[node name="Flyde" type="CharacterBody2D" node_paths=PackedStringArray("sprite", "nav") groups=["enemy"]]
scale = Vector2(0.7, 0.7)
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_inw11")
sprite = NodePath("AnimatedSprite2D")
nav = NodePath("Nav")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(2.2, 2.2)
shape = SubResource("CapsuleShape2D_fa6de")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(-1, 1)
sprite_frames = SubResource("SpriteFrames_j4qsk")
animation = &"death"

[node name="hurtBox" type="Area2D" parent="AnimatedSprite2D"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AnimatedSprite2D/hurtBox"]
scale = Vector2(2.2, 2.2)
shape = SubResource("CapsuleShape2D_fa6de")

[node name="hitBox" type="Area2D" parent="AnimatedSprite2D"]

[node name="strikeShape" type="CollisionShape2D" parent="AnimatedSprite2D/hitBox"]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_vb2cf")

[node name="Nav" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
avoidance_enabled = true

[node name="Range" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Range"]
scale = Vector2(0.6, 0.6)
shape = SubResource("CapsuleShape2D_n0o3a")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="attack_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="area_entered" from="AnimatedSprite2D/hitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
